--- a/backEnd/.gitignore
+++ b/backEnd/.gitignore
@@ -1,3 +1,14 @@
+# Environment variables
 .env
+
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+
+# Database
+*.db
+*.sqlite3
+
+# Logs
+*.log
