--- a/.gitignore
+++ b/.gitignore
@@ -4,30 +4,20 @@ __pycache__/
 myEnv/
 venv/
 
-# Environment variables
+# Dependencies
+node_modules/
+
+# Environment
 .env
 .env.local
-.env.development
-.env.production
 
-# Node
-node_modules/
+# Build
 dist/
 build/
+
+# System
 .DS_Store
 
 # IDE
 .vscode/
 .idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Git
-.git/
