--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,13 @@ venv/
 
 # Environment variables
 .env
-.env.local
-.env.development
-.env.production
+.env.*
 
 # Node
 node_modules/
 dist/
+dist-ssr/
 build/
-.DS_Store
 
 # IDE
 .vscode/
@@ -24,10 +22,5 @@ build/
 *.njsproj
 *.sln
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Git
-.git/
+# System
+.DS_Store
