--- a/backEnd/requirements.txt
+++ b/backEnd/requirements.txt
@@ -1,18 +1,25 @@
 annotated-types==0.7.0
 anyio==4.9.0
 click==8.2.0
-fastapi==0.115.12
+fastapi>=0.68.0
 greenlet==3.2.2
 h11==0.16.0
 idna==3.10
-mysql-connector-python==9.3.0
-pydantic==2.11.4
-pydantic_core==2.33.2
+mysql-connector-python>=8.0.26
+pydantic>=1.8.2
+pydantic-settings>=2.0.0
 pyodbc==5.2.0
-python-dotenv==1.1.0
+python-dotenv>=0.19.0
 sniffio==1.3.1
-SQLAlchemy==2.0.40
+sqlalchemy>=1.4.23
 starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
-uvicorn==0.34.2
+uvicorn>=0.15.0
+python-jose>=3.3.0
+passlib>=1.7.4
+bcrypt>=3.2.0
+pyjwt==2.7.0
+python-multipart>=0.0.5
+itsdangerous>=2.0.1
+authlib>=1.0.0
