--- a/backEnd/requirements.txt
+++ b/backEnd/requirements.txt
@@ -1,25 +1,40 @@
 annotated-types==0.7.0
 anyio==4.9.0
+APScheduler==3.11.0
+Authlib==1.5.2
+bcrypt==4.0.1
+certifi==2025.4.26
+cffi==1.17.1
 click==8.2.0
-fastapi>=0.68.0
+cryptography==44.0.3
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+fastapi==0.115.12
 greenlet==3.2.2
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
-mysql-connector-python>=8.0.26
-pydantic>=1.8.2
-pydantic-settings>=2.0.0
+itsdangerous==2.2.0
+mysql-connector-python==9.3.0
+passlib==1.7.4
+pyasn1==0.4.8
+pycparser==2.22
+pydantic==2.11.4
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+PyJWT==2.7.0
 pyodbc==5.2.0
-python-dotenv>=0.19.0
+python-dotenv==1.1.0
+python-jose==3.3.0
+python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
-sqlalchemy>=1.4.23
+SQLAlchemy==2.0.40
 starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
-uvicorn>=0.15.0
-python-jose>=3.3.0
-passlib>=1.7.4
-bcrypt>=3.2.0
-pyjwt==2.7.0
-python-multipart>=0.0.5
-itsdangerous>=2.0.1
-authlib>=1.0.0
+tzlocal==5.3.1
+uvicorn==0.34.2
