--- a/frontEnd/.gitignore
+++ b/frontEnd/.gitignore
@@ -1,25 +1,11 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Node specific
+node_modules/
+dist/
+build/
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment files
 .env
+.env.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# System files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
